examples/test/testpolicy9825.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9825
  namespace: namespace28
spec:
  podSelector:
    matchLabels:
      key46: value35
      key5: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value28
      podSelector:
        matchLabels:
          key6: value44
          key28: value30
